<resources>
    <string name="app_name">تیپ تو</string>
    <string name="title_home">خانه</string>
    <string name="title_perfume">عطر و اکسسوری</string>
    <string name="title_trimmingHair"> پیرایش</string>
    <string name="title_style">تیپ و استایل</string>
    <string name="title_makeup">گریم</string>
    <string name="noConnection">اتصال به اینترنت برقرار نیست!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabb">TabbActivity</string>
    <string name="select_sex">جنسیت خود را انتخاب کنید</string>
    <string name="confirm_txt">تایید</string>
    <string name="enter_code">کد را وارد کنید</string>
    <string name="app_name_fa">تیپ نو</string>
    <string name="enter_number">شماره همراه خود را وارد کنید</string>
    <string name="enter_txt">ورود</string>
    <string name="more_listitem">بیشتر</string>
    <string name="selected_videos">ویدیوهای منتخب</string>
    <string name="mostviewed_videos">ویدیوهای پربیننده</string>
    <string name="favorite_videos">ویدیوهای موردعلاقه</string>
    <string name="card_view_text">ده عطر محبوب بانوان</string>
    <string name="requestCodeRecevied">کد فعال سازی ارسال شده توسط \n  پیامک را در کادر زیر وارد کنید</string>
    <string name="realRequestCode">فعالسازی</string>
    <string name="dontGiveRequestCode">کد فعال سازی را دریافت نکرده اید؟</string>
    <string name="incorrectCode">کد وارد شده اشتباه است</string>
    <string name="search_txt">جستجو</string>
    <string name="tag_select_txt">انتخاب برچسب</string>
    <string name="result_txt">نتایج</string>
    <string name="filter_txt">فیلتر</string>
    <string name="serverError">خطایی در سرور رخ داده است.</string>
    <string name="try_again_button">تلاش مجدد</string>
    <string name="tag_page_txt">برای جستجو برچسب های مورد نظر خود را انتخاب کنید</string>
</resources>
