<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_perfume"
        android:icon="@drawable/perfume"
        android:title="@string/title_perfume"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_trimming"
        android:icon="@drawable/salon"
        android:title="@string/title_trimmingHair"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/navigation_style"
        android:icon="@drawable/braces"
        android:title="@string/title_style"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/navigation_makeup"
        android:icon="@drawable/cosmetics"
        android:title="@string/title_makeup"
        app:showAsAction="always|withText"/>

</menu>