<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@mipmap/background"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@id/tipnoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/tipnoo" />
    <EditText
        android:textSize="12sp"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:gravity="center"
        android:id="@+id/mobile_number_input"
        android:background="@drawable/bg_red"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="60dp"
        android:hint="@string/enter_number"
        android:maxLength="11"
        android:layout_below="@id/tipnoo_txt"
        android:layout_centerHorizontal="true"
        android:inputType="phone" />
    <Button
        android:id="@+id/btn_register"
        android:textSize="12sp"
        android:textColor="#ffb9311f"
        android:background="@drawable/bg_yellow"
        android:layout_width="match_parent"
        android:layout_height="50.0dip" android:layout_marginLeft="60dp"
        android:layout_marginTop="50.0dip" android:layout_marginRight="60dp"
        android:text="@string/enter_txt"
        android:layout_below="@id/mobile_number_input"
        android:layout_centerHorizontal="true"  />
    <TextView
        android:textColor="#ffffffff"
        android:id="@id/tipnoo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="238dp"
        android:text="@string/app_name_fa"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>