<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/viewpager_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"

                >
                <android.support.v4.view.ViewPager
                   android:id="@+id/Gallerypager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    tools:ignore="RtlHardcoded" />
                <me.relex.circleindicator.CircleIndicator
                    app:ci_drawable="@drawable/bg_red"
                    android:id="@+id/indicator"
                    android:background="#fff2f0ed"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <ScrollView


                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="10dp"
               >

                    <LinearLayout

                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <RelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                        >
                            <TextView
                                android:textSize="12sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/selected_videos"
                                android:layout_alignParentEnd="true"
                               />
                            <TextView
                                android:id="@+id/more_selectedvideo"
                                android:textSize="12sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/more_listitem"
                                android:layout_alignParentStart="true"/>
                                <!--fontPath="fonts/iransans.ttf" />-->
                            <android.support.v7.widget.RecyclerView
                               android:layout_below="@+id/more_selectedvideo"
                                android:id="@+id/selected_videos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                               />
                        </RelativeLayout>


                        <RelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                       >
                            <TextView
                                android:layout_below="@+id/selected_videos"
                                android:textSize="12sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/mostviewed_videos"
                                android:layout_alignParentEnd="true"
                                tools:ignore="NotSibling" />
                            <TextView
                                android:id="@+id/more_mostvisitedvideo"
                                android:textSize="12sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10.0dip"
                                android:text="@string/more_listitem"
                                android:layout_alignParentStart="true"
                                />
                            <android.support.v7.widget.RecyclerView
                                android:layout_below="@+id/more_mostvisitedvideo"
                                android:id="@+id/mostviewed_videos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                />
                        </RelativeLayout>

                        <!--<RelativeLayout-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content">-->
                            <!--<TextView-->
                                <!--android:textSize="12sp"-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:layout_margin="10.0dip"-->
                                <!--android:text="@string/favorite_videos"-->
                                <!--android:layout_alignParentRight="true"-->
                                <!--/>-->
                            <!--<TextView-->
                                <!--android:textSize="12sp"-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:layout_margin="10dp"-->
                                <!--android:text="@string/more_listitem"-->
                                <!--android:layout_alignParentLeft="true"-->
                               <!--/>-->
                        <!--</RelativeLayout>-->
                        <!--<android.support.v7.widget.RecyclerView-->
                            <!--android:id="@+id/favorite_videos"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="0dp"-->
                            <!--android:layout_weight="0.5" />-->
                    </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>